--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,5 @@ django-seed==0.1.9
 psycopg2-binary==2.7.5
 gunicorn==19.9.0
 whitenoise==4.1
-django-model-utils==3.1.2
+django-model-utils==3.1.2   # jazzband `Choices` replacement for enum
+djangorestframework==3.9.0
