Add environ for 12-factor

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ gunicorn==19.9.0
 whitenoise==4.1
 django-model-utils==3.1.2   # jazzband `Choices` replacement for enum
 djangorestframework==3.9.0
+django-environ==0.4.5
+django-livereload-server==0.3.2
