--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,15 @@
 django==2.1.2
-django-extensions==2.1.3
-django-seed==0.1.9
-psycopg2-binary==2.7.5
-gunicorn==19.9.0
-whitenoise==4.1
-django-model-utils==3.1.2   # jazzband `Choices` replacement for enum
 djangorestframework==3.9.0
 django-environ==0.4.5
+django-extensions==2.1.3
 django-livereload-server==0.3.2
-sentry-sdk==0.5.2
-googlemaps==3.0.2
-ortools==6.9.5824
+django-model-utils==3.1.2   # jazzband `Choices` replacement for enum
+django-seed==0.1.9
 flake8==3.6.0
+googlemaps==3.0.2
+gunicorn==19.9.0
+ortools==6.9.5824
+psycopg2-binary==2.7.5
+pylint==2.1.1
+sentry-sdk==0.5.2
+whitenoise==4.1
