--- a/.semaphore/semaphore.yml
+++ b/.semaphore/semaphore.yml
@@ -10,7 +10,7 @@ blocks:
     task:
       prologue:
         commands:
-          - sem-version python 3.6
+          - sem-version python 3.7
           - checkout
           - pip install -r requirements.txt
           # TODO cache pip downloads
@@ -20,6 +20,6 @@ blocks:
         commands:
           - flake8
 
-      - name: pylint
-        commands:
-          - pylint bernard
+#      - name: pylint
+#        commands:
+#          - pylint bernard
